infra/kubernetes/gateway/admin-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: admin-http-route
spec:
  parentRefs:
  - name: ingress-gateway
  hostnames:
  - "admin.brainybobs.xyz"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api/admin
    backendRefs:
    - name: api-admin
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: web-admin
      port: 80
