infra/kubernetes/gateway/user-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: user-http-route
spec:
  parentRefs:
  - name: ingress-gateway
  hostnames:
  - "user.brainybobs.xyz"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api
    backendRefs:
    - name: api-user
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: web-user
      port: 80
